--- a/src/style/global.css
+++ b/src/style/global.css
@@ -23,6 +23,7 @@ body {
     font-weight: 400;
     overflow-x: hidden;
     background-color: #FFF;
+    line-height: 1.5;
 }
 
 * {
@@ -39,3 +40,15 @@ img {
 ul {
     list-style: none;
 }
+
+/* .btn1 {
+    background-color: #FFF;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 30px;
+    color: var(--main-color);
+    font-size: 16px;
+    text-transform: all 0.5s ease;
+    transition: all 0.5s ease;
+    box-shadow: var(--shadow-black-300);
+} */
