--- a/src/style/style.css
+++ b/src/style/style.css
@@ -44,3 +44,42 @@
 .navbar .nav-item .nav-link:hover::before {
     transform: scale(1);
 }
+
+/* Home */
+.home {
+    min-height: 100vh;
+    padding: 150px 0;
+    background-color: var(--main-to-dark-color);
+}
+
+.home-text h1{
+    font-size: 45px;
+    font-weight: 700;
+    color: #FFF;
+    margin: 0 0 20px;
+}
+
+.home-text p {
+    font-size: 18px;
+    line-height: 28px;
+    color: #FFF;
+    margin: 0;
+    font-weight: 300;
+}
+
+.home-img img{
+    max-width: 250px;
+    width: 100%;
+}
+
+.btn-1 {
+    background-color: #FFF;
+    padding: 12px 30px;
+    border: 5px solid red;
+    border-radius: 30px;
+    color: var(--main-color);
+    font-size: 16px;
+    text-transform: all 0.5s ease;
+    transition: all 0.5s ease;
+    box-shadow: var(--shadow-black-300);
+}
