--- a/src/style/global.css
+++ b/src/style/global.css
@@ -41,14 +41,94 @@ ul {
     list-style: none;
 }
 
-/* .btn1 {
+#btn-1 {
     background-color: #FFF;
     padding: 12px 30px;
     border: none;
     border-radius: 30px;
     color: var(--main-color);
     font-size: 16px;
-    text-transform: all 0.5s ease;
+    text-transform: capitalize;
     transition: all 0.5s ease;
     box-shadow: var(--shadow-black-300);
+    font-weight: 500;
+}
+
+/* #btn-1:hover {
+    opacity: 0.8;
 } */
+
+#btn-1:focus {
+    box-shadow: var(--shadow-black-300);
+}
+
+#btn-1:hover {
+    color: #FFF;
+    background-color: var(--color-3);
+}
+
+@keyframes spin_01 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes bounceTop_01 {
+    0%,100%{
+        transform: translateY(-30px);
+    }
+
+    50%{
+        transform: translateY(0px);
+    }
+}
+
+@keyframes pulse_01 {
+    0%{
+        transform: scale(0.94);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    }
+
+    70%{
+        transform: scale(1);
+        box-shadow: 0 0 0 12px rgba(255, 255, 255, 0);
+    }
+
+    100%{
+        transform: scale(0.94);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
+}
+
+.effect-wrap .effect {
+    position: absolute;
+    z-index: -1;
+}
+
+.effect-wrap .effect-1 {
+    left: 20%;
+    top: 20%;
+    font-size: 20px;
+    color: var(--color-2);
+    animation: spin_01 5s linear infinite;
+}
+
+.effect-wrap .effect-2 {
+    right: 5%;
+    top: 10%;
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.5);
+    animation: spin_01 7s linear infinite;
+}
+
+.effect-wrap .effect-3 {
+    left: 5%;
+    bottom: 30%;
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.5);
+    animation: bounceTop_01 5s linear infinite;
+}
